# AlgoEngine

./: .gitignore  API.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
cli/: __init__.py  main.py
config/: default.yaml
docs/: architecture.md
examples/: __init__.py  simple_moving_average.py
src/: __init__.py
src/adapters/: __init__.py  alpha_vantage.py  simulated_broker.py  yahoo_finance.py
src/algorithms/: __init__.py  indicators.py  sample_strategies.py  strategy.py  strategy_manager.py
src/backtesting/: __init__.py  engine.py  optimization.py  results.py
src/data/: __init__.py  feed.py  models.py  storage.py  stream_cache.py  sync_manager.py  websocket_feed.py
src/engine/: __init__.py  engine.py  events.py  interfaces.py  timekeeper.py
src/monitoring/: latency_monitor.py
src/portfolio/: __init__.py  metrics.py  portfolio.py
src/risk/: __init__.py  risk_manager.py
src/trading/: __init__.py  execution_engine.py  models.py  order_manager.py  position_manager.py
src/utils/: __init__.py  config.py  logger.py
tests/: __init__.py  conftest.py  test_backtest_engine.py  test_config.py  test_data_cache.py  test_data_models.py  test_data_storage.py  test_events.py  test_indicators.py  test_latency_monitor.py  test_metrics.py  test_order_manager.py  test_portfolio.py  test_position_manager.py  test_risk_manager.py  test_strategy.py  test_strategy_manager.py  test_stream_cache.py  test_sync_manager.py  test_timekeeper.py  test_trading_models.py  test_websocket_feed.py
